--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 		<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
+				<!-- Personal Introduction -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Personal</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+							<p>I am a full stack web developer and passionate programmer. I love developing projects, implementing ideas into a working prototype and building on it thereafter. Moreover, I am a problem solver who likes to solve new problems by developing software or applications which make an impact on the real world.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li>When I'm not turning coffee into code, I like to play basketball, soccer, chess and drive to explore new places.</li>
 						</ul>
 					</section>
 
