updated links and removed bugs

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="left-sidebar.html">Project</a></li>
-								<li><a href="right-sidebar.html">Web Assignment</a></li>
-								<li><a href="https://github.com/rohansapre/sapre-rohan-webdev">Git Repo</a></li>
+								<li><a href="http://solicitar.ml/" target="_blank">Project</a></li>
+								<li><a href="http://localhost:3000/assignment/index.html#/login">Web Assignment</a></li>
+								<li><a href="https://github.com/rohansapre/sapre-rohan-webdev" target="_blank">Git Repo</a></li>
 							</ul>
 						</nav>
 
