added work experience content

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Self-motivated person interested in working on development projects which implement and use state of the art technologies for creating innovative products which have an impact on the society.</p>
 
    			<ul class="info-list">
    				<li>
@@ -148,7 +148,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p> Being an enthusiastic learner, I can adapt to new technologies easily and contribute to the product development in short span of time. I believe in team work and possess the ability to match deadlines.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -229,7 +229,12 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Cogito Corporation</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>
+                            <ul>
+                                <li>Developed features for the Cogito product as a backend developer in the platform team primarily working on technologies such as Gradle, Jenkins, Zookeeper, Vagrant, Puppet and programming languages Java and bash scripting.</li>
+                                <li>Designed new features to be implemented to better monitor and debug staging and production servers to resolve issues promptly.</li>
+                            </ul>
+                        </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -247,7 +252,11 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Northeastern University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>
+                            <ul>
+                                <li>Assisted Professor Byron Wallace as the teaching assistant for the undergraduate course Artificial Intelligence by conducting TA hours, assignment and exams grading and managing Enterprise GitHub for online homework submissions for 25 students.</li>
+                            </ul>
+                        </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -265,7 +274,12 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Cognizant</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                        <p>
+                            <ul>
+                                <li>Designed, developed and tested web services using TIBCO Designer in the middleware of the member portal for a US based healthcare client working in a team of 3 people, which led to improvement in the performance of the portal.</li>
+                                <li>Designed the database and created a Bill Payment web application leading a team of 5 people, using Java, J2EE, JavaScript, HTML, CSS, jQuery and Bootstrap to learn backend web development. Awarded as the best project from the batch.</li>
+                            </ul>
+                        </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -285,7 +299,14 @@
 
                     <div class="timeline-content">
                         <h4>Educloud Technologies</h4>
-                        <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                        <p>
+                            <ul>
+                                <li>Published an iOS application on App Store using Swift language and Xcode which increased the company's user base by 20%.</li>
+                                <li>Developed the application using Swift language to provide future compatibility and avoid migration.</li>
+                                <li>Designed the backend of the application using MVC architecture to provide all the CRUD functionalities.</li>
+                                <li>Worked on the frontend development as well, assisting in designing the layouts and data flow of different modules.</li>
+                            </ul>
+                        </p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -383,7 +404,7 @@
    			<h5>Projects</h5>
    			<h1>What Can I Do For You?</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Passionate about developing new products which make the world a better place. I constantly participate in Hackathons and develop ideas into working prototypes. Strongly support the idea of open source software and all my projects are open source and can be found on my GitHub.</p>
 
    		</div>   		
    	</div> <!-- /section-intro -->
