--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/uc?export=download&id=0B4P58ADNDj-VZUtCYzFGS1Q4YjA" title="Download Resume" class="button button-primary">Download Resume</a>
    		</div>   		
    	</div>
 
@@ -343,7 +343,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Northeastern University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>Finished Program Paradigm Design and Foundations of Artificial Intelligence courses in the Fall semester. Currently studying Algorithms and Web Development in the Spring semester. Frequently attending Hackathons and working as a Teaching Assistant at College of Computer and Information Science.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -361,7 +361,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Nirma University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Felicitated by Director for winning coding competition. Served as Sports Head for Rotaract Club of Nirma Institutes. Captained the University football and basketball teams.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -379,7 +379,8 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Amar Jyoti Saraswati International School</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>First position in academics in Bhavnagar district. Participated in various sports and co-circular activities such as quizzing and dancing competitions.
+                        </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -517,7 +518,7 @@
 		<div class="row">
 			<div class="col-twelve">
 
-				<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
+				<div class="block-1-3 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
 
 					<div class="bgrid stat">
 
@@ -585,7 +586,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Please feel free to reach out to me via email or call regarding any potential software engineering roles.</p>
 
    		</div> 
    	</div> <!-- /section-intro -->
