added project details and profile info

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
+   					<strong>Name:</strong>
    					<span>Rohan Sapre</span>
    				</li>
    				<li>
@@ -133,8 +133,8 @@
    					<span>Software Engineer Intern</span>
    				</li>
    				<li>
-   					<strong>Website:</strong>
-   					<span>https://rohansapre.github.io</span>
+   					<strong>Devpost URL:</strong>
+   					<span>https://devpost.com/rohansapre</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -198,8 +198,6 @@
 
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
-
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -422,8 +420,9 @@
 
 	            	 <h3>CleanHood</h3>
 
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	         		</p>
+		            <p class="desc">
+                        CleanHood is a crowd sourced platform that allows users to create events by uploading images of neighborhood which might need a clean up drive to clean all the garbage riddled roads or any offensive graffiti on the walls.
+                    </p>
 	         		
 	         	</div> 	         	 
 
@@ -437,7 +436,8 @@
 
 	            	<h3>solicitar.io</h3>  
 
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p class="desc">
+                        solicitar.io is a one stop interview solution which caters to all the needs of a technical interviews. solicitar.io aims to provide a platform which has all these facilities in one place, so the recruiter, interview or the applicant can manage all their interviews from one platform.
 	         		</p>
 
 	            </div>	                          
@@ -452,8 +452,9 @@
 
 	            	<h3>AuToDo</h3>
 
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p> 
+		            <p class="desc">
+                        Developed an Android application using Android Studio, IBM Watson Alchemy Language API to parse through content and find tasks and used third party email provider to build an application which completes all your chores such as send out emails and grocery shopping automatically.
+	        		</p> 
 
 	            </div> 	            	               
 
@@ -467,7 +468,8 @@
 
 	            	<h3>Bank Product Recommender</h3>
 
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p class="desc">
+                        Developed machine learning classifiers for multi-label classified data of the historical product usage of 1 million bank customers over the period of 1.5 years to recommend personalized products which are most likely to be purchased by these customers in the next month.
 	         		</p> 
 	         		
 	            </div>                
@@ -482,8 +484,9 @@
 
 	            	<h3>Travelogue</h3>
 
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-	        			</p> 
+		            <p class="desc">
+                        As a tourist, one faces many difficulties from the moment he lands. Finding the right tourist guide, getting them at the right price and getting rid of the same old monotonous itinerary; These are some of the problems which motivated us to build Travelogue at YHack'16 hackathon at Yale University.
+	        		</p> 
 
 	            </div>	               
 
