updated formatting and added latest profile information

--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
-	   		<div class="logo">
-		         <a href="index.html">MENU</a>
-		      </div>		      
-
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
@@ -229,8 +225,11 @@
 	   					<h4>Cogito Corporation</h4>
 	   					<p>
                             <ul>
-                                <li>Developed features for the Cogito product as a backend developer in the platform team primarily working on technologies such as Gradle, Jenkins, Zookeeper, Vagrant, Puppet and programming languages Java and bash scripting.</li>
-                                <li>Designed new features to be implemented to better monitor and debug staging and production servers to resolve issues promptly.</li>
+                                <li>Working as a backend developer in their platform team primarily working on technologies such as Gradle, Jenkins, Zookeeper, Vagrant, Puppet and programming languages Java and bash scripting.</li>
+                                <li>Implemented new backend features for the Cogito web based product to improve the efficiency of call signals computation.</li>
+                                <li>Designed microservices status APIs to enhance Icinga monitoring through Nagios plugin shell scripts.</li>
+                                <li>Developed and improved microservices to seamlessly work with AWS S3 and SQS using AWS Java SDK.</li>
+                                <li>Designed and developed load test generation tool which can be executed as Gradle Plugin or Jenkins job.</li>
                             </ul>
                         </p>
 	   				</div>
@@ -274,8 +273,9 @@
 	   					<h4>Cognizant</h4>
                         <p>
                             <ul>
+                                <li>Designed the database and created the Bill Payment section working in a team of 5 people, using Java, J2EE, JavaScript, HTML, CSS, jQuery and Bootstrap to learn backend web development.</li>
                                 <li>Designed, developed and tested web services using TIBCO Designer in the middleware of the member portal for a US based healthcare client working in a team of 3 people, which led to improvement in the performance of the portal.</li>
-                                <li>Designed the database and created a Bill Payment web application leading a team of 5 people, using Java, J2EE, JavaScript, HTML, CSS, jQuery and Bootstrap to learn backend web development. Awarded as the best project from the batch.</li>
+                                <li>Learned TIBCO Designer software for application integration in less than a week to submit the deliverables of the client in time.</li>
                             </ul>
                         </p>
 	   				</div>
@@ -300,9 +300,9 @@
                         <p>
                             <ul>
                                 <li>Published an iOS application on App Store using Swift language and Xcode which increased the company's user base by 20%.</li>
-                                <li>Developed the application using Swift language to provide future compatibility and avoid migration.</li>
                                 <li>Designed the backend of the application using MVC architecture to provide all the CRUD functionalities.</li>
-                                <li>Worked on the frontend development as well, assisting in designing the layouts and data flow of different modules.</li>
+                                <li>Assisted in the design of app layouts and the data flow between various modules.</li>
+                                <li>Developed the application using Swift language instead of Objective C to provide future compatibility and avoid migration.</li>
                             </ul>
                         </p>
                     </div>
@@ -341,7 +341,14 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Northeastern University</h4>
-	   					<p>Finished Program Paradigm Design and Foundations of Artificial Intelligence courses in the Fall semester. Currently studying Algorithms and Web Development in the Spring semester. Frequently attending Hackathons and working as a Teaching Assistant at College of Computer and Information Science.</p>
+	   					<p>
+                            <ul>
+                                <li>Finished Program Paradigm Design and Foundations of Artificial Intelligence courses in the Fall semester and Algorithms and Web Development in the Spring semester.</li>
+                                <li>Hackathons enthusiast and frequenter.</li>
+                                <li>Worked as Teaching Assistant for Artificial Intelligence Undergraduate course.</li>
+                                <li>Currently on Co-op experience working as Software Engineer Intern at Cogito Corporation.</li>
+                            </ul>
+                        </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -354,12 +361,16 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2011 - June 2015</p>
+	   					<p>Jul 2011 - Jun 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Nirma University</h4>
-	   					<p>Felicitated by Director for winning coding competition. Served as Sports Head for Rotaract Club of Nirma Institutes. Captained the University football and basketball teams.</p>
+	   					<p>
+                            <ul>
+                                <li>Felicitated by Director for winning national level coding competition. Served as Sports Head for Rotaract Club of Nirma Institutes. Captained the University soccer and basketball teams.</li>
+                            </ul>
+                        </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -372,12 +383,15 @@
 
 	   				<div class="timeline-header">
 	   					<h3>High School</h3>
-	   					<p>June 1998 - May 2011</p>
+	   					<p>Jun 1998 - May 2011</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Amar Jyoti Saraswati International School</h4>
-	   					<p>First position in academics in Bhavnagar district. Participated in various sports and co-circular activities such as quizzing and dancing competitions.
+	   					<p>
+                            <ul>
+                                <li>First position in academics in Bhavnagar district. Participated in various sports and co-circular activities such as quizzing and dancing competitions.</li>
+                            </ul>
                         </p>
 	   				</div>
 
@@ -530,7 +544,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							5000
+							8000
 						</h3>
 
 						<h5 class="stat-title">
@@ -562,7 +576,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							300
+							400
 						</h3>
 
 						<h5 class="stat-title">
