cleaning up and updated profile picture

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
    			<div class="intro-info">
 
-   				<img src="assets/images/Rohan Sapre.jpg" alt="Profile Picture">
+   				<img src="images/Rohan Sapre Headshot.jpg" alt="Profile Picture">
 
    				<p class="lead">Graduate Student pursing Computer Science at Northeastern University interested in the field of backend development, full stack development and machine learning. Comfortable with programming in Java and Python and development frameworks such as Spring and Flask.</p>
    			</div>   			
