--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
    				<img src="images/Rohan Sapre Headshot.jpg" alt="Profile Picture">
 
-   				<p class="lead">Graduate Student pursing Computer Science at Northeastern University interested in the field of backend development, full stack development and machine learning. Comfortable with programming in Java and Python and development frameworks such as Spring and Flask.</p>
+   				<p class="lead">Graduate Student pursing Computer Science at Northeastern University interested in the field of backend development, full stack development and machine learning. Proficient with programming in Java and Python, quite familiar with development frameworks such as Spring and Flask.</p>
    			</div>   			
 
    		</div>   		
@@ -148,7 +148,7 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent90"><span>90%</span></div>
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
@@ -217,8 +217,32 @@
 	   				</div>
 
 	   				<div class="timeline-header">
+	   					<h3>Technology Summer Analyst</h3>
+	   					<p>May 2018 - Aug 2018</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Goldman Sachs</h4>
+	   					<p>
+                            <ul>
+                                <li> Working as a backend developer in the Operations Engineering team in the Technology Division of Goldman Sachs, primarily working with technologies such as Java 8, Spring, Kafka and MongoDB.</li>
+                                <li>Designed and developing independent Java APIs for Exception Management framework to be built as a Maven module to seamlessly integrate with existing microservices leveraging Spring Framework.</li>
+                                <li>Implementing and integrating exception persistence functionality working with Apache Kafka to stream events and MongoDB as the persistence layer.</li>
+                            </ul>
+                        </p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+   				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
 	   					<h3>Software Engineer Intern</h3>
-	   					<p>May 2017 - Present</p>
+	   					<p>May 2017 - Dec 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -282,8 +306,6 @@
 
 	   			</div> <!-- /timeline-block -->
 
-                </div> <!-- /timeline-block -->
-
                 <div class="timeline-block">
 
                     <div class="timeline-ico">
@@ -343,10 +365,11 @@
 	   					<h4>Northeastern University</h4>
 	   					<p>
                             <ul>
-                                <li>Finished Program Paradigm Design and Foundations of Artificial Intelligence courses in the Fall semester and Algorithms and Web Development in the Spring semester.</li>
+                                <li>Some of the courses I studied include Program Paradigm Design, Foundations of Artificial Intelligence courses, Algorithms, Web Development, Large Scale Parallel Data Processing, Data Mining.</li>
                                 <li>Hackathons enthusiast and frequenter.</li>
-                                <li>Worked as Teaching Assistant for Artificial Intelligence Undergraduate course.</li>
-                                <li>Currently on Co-op experience working as Software Engineer Intern at Cogito Corporation.</li>
+                                <li>Worked as Teaching Assistant for both graduate and undergraduate Artificial Intelligence courses.</li>
+                                <li>Gained Co-op experience working as Software Engineer Intern at Cogito Corporation.</li>
+                                <li>Gained internship experience working as Technology Summer Analyst at Goldman Sachs.</li>
                             </ul>
                         </p>
 	   				</div>
@@ -544,7 +567,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							8000
+							13000
 						</h3>
 
 						<h5 class="stat-title">
@@ -560,7 +583,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							5
+							8
 						</h3>
 
 						<h5 class="stat-title">
@@ -576,7 +599,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							400
+							800
 						</h3>
 
 						<h5 class="stat-title">
